--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "pg": "^8.12.0"
   },
-  "devDependencies": {},
   "main": "src/{index.js,functions/*.js}"
 }
